<resources>
    <string name="app_name">My Teleprompter</string>
    <string name="editor_delete_script_successful">Script deleted</string>
    <string name="editor_delete_script_failed">Error with deleting script</string>
    <string name="delete_dialog_msg">Delete this script?</string>
    <string name="empty_view_title_text">My Teleprompter</string>
    <string name="empty_view_subtitle_text">Get started by adding your scripts</string>
    <string name="blind_text">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc, quis gravida magna mi a libero. Fusce vulputate eleifend sapien. Vestibulum purus quam, scelerisque ut, mollis sed, nonummy id, metus. Nullam accumsan lorem in dui. Cras ultricies mi eu turpis hendrerit fringilla. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; In ac dui quis mi consectetuer lacinia. Nam pretium turpis et arcu. Duis arcu tortor, suscipit eget, imperdiet nec, imperdiet iaculis, ipsum. Sed aliquam ultrices mauris. Integer ante arcu, accumsan a, consectetuer eget, posuere ut, mauris. Praesent adipiscing. Phasellus ullamcorper ipsum rutrum nunc. Nunc nonummy metus. Vestibulum volutpat pretium libero. Cras id dui.</string>
    <string name="delete">Delete</string>
    <string name="teletext_hint">Enter your text here</string>
    <string name="teletext_title_hint">Title</string>
    <string name="title_activity_settings">Settings</string>
    <string name="button_preview">Preview</string>
    <string name="type_activity">Editor Activity</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="cancel">Cancel</string>
    <string name="toast">Document Deleted!</string>
    <string name="display">Display</string>
    <string name="mirror_title">Mirror</string>
    <string name="mirror_content">Mirror the text</string>
    <string name="font_title">Font Size</string>
    <string name="font_summary">Set the fontsize</string>
    <string name="scrolling">Scrolling</string>
    <string name="auto_title">Auto-Start</string>
    <string name="auto_summary">Text starts scrolling automatically after given amount of time</string>
    <string name="delay">Delay</string>
    <string name="delay_text"> seconds</string>
    <string name="delay_summary">Amount of time to pass before the scrolling starts</string>
    <string name="countdown">Countdown</string>
    <string name="countdown_summary">Shows a countdown before scrolling begins</string>
    <string name="scroll_speed">Scrollspeed</string>
    <string name="scroll_speed_summary">Select a scrollspeed between 1 (slow) and 100 (fast)</string>
    <string name="test">Test</string>
    <string name="test_summary">Preview current settings with blind text</string>
    <string name="download_success">Download Successful</string>
    <string name="download_fail">Download Failed</string>
</resources>
